fix: dockerfile and docker compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,16 @@
-networks:
-  api-medidor:
-    driver: bridge
-
 services:
-  postgresql:
-    image: 'bitnami/postgresql:latest'
+  backend:
+    depends_on:
+      - database
+    image: gustavocostago/api-medidor:latest
+    env_file:
+      - .env
+    ports:
+      - 25000:25000
+    networks:
+      - app-network
+  database:
+    image: bitnami/postgresql
     ports:
       - 5432:5432
     environment:
@@ -12,26 +18,7 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=db_medidor
     networks:
-      - api-medidor
-# services:
-#   backend:
-#     depends_on:
-#       - database
-#     image: gustavocostago/api-medidor:latest
-#     ports:
-#       - 25000:25000
-#     networks:
-#       - app-network
-#   database:
-#     image: bitnami/postgresql
-#     ports:
-#       - 5432:5432
-#     environment:
-#       - POSTGRES_USER=admin
-#       - POSTGRES_PASSWORD=password
-#       - POSTGRES_DB=db_medidor
-#     networks:
-#       - app-network
-# networks:
-#   app-network:
-#     external: false
+      - app-network
+networks:
+  app-network:
+    external: false
